Client/Components/Common/FlowContextMenu/FlowContextMenu.razor.scss
.flow-contextmenu
{
  min-width: 14rem;
  padding: 0.5rem;
  --menu-border: rgba(255, 255, 255, 0.08);
  --menu-bg: linear-gradient(45deg,
          rgba(10, 20, 28, 0.2) 0%,
          rgba(10, 20, 28, 0.7) 100%);
  --item-border: rgba(255, 255, 255, 0.1);
  --item-color: #fff;
  --item-bg-hover: rgba(255, 255, 255, 0.1);
  background: var(--menu-bg);
  backdrop-filter: blur(5px);
  z-index: 999999999;
  list-style: none;
  margin: 4px;
  padding: 0;
  box-shadow: 0 0 0 1px var(--menu-border), 0 2px 2px rgb(0 0 0 / 3%),
  0 4px 4px rgb(0 0 0 / 4%), 0 10px 8px rgb(0 0 0 / 5%),
  0 15px 15px rgb(0 0 0 / 6%), 0 30px 30px rgb(0 0 0 / 7%),
  0 70px 65px rgb(0 0 0 / 9%);
  display: flex;
  flex-direction: column;
  animation: menuAnimation 0.2s 0s both;

  
  height: 0;
  position: fixed;
  top: var(--top);
  left: var(--left);
  transform-origin: left;

  li.separator {
    border-top: 1px solid var(--border-color);    
  }
  
  li:not(.separator) {
    padding: 4px;

    .icon {
      width: 1.5rem;
      margin-right:0.5rem;
      text-align: center;      
    }
    color: var(--item-color);
    background: 0;
    border: 0;
    white-space: nowrap;
    width: 100%;
    border-radius: 4px;
    padding: 6px 24px 6px 7px;
    text-align: left;
    display: flex;
    align-items: center;
    font-size: 14px;
    width: 100%;
    animation: menuItemAnimation 0.2s 0s both;
    font-family: "Inter", sans-serif;
    cursor: pointer;

    .caret {
      position: absolute;
      right:0.5rem;
    }

    &:hover {
      background-color: var(--item-bg-hover);
    }
  }
}


@keyframes menuAnimation {
  0% {
    opacity: 0;
    transform: scale(0.5);
  }

  100% {
    height: var(--height);
    opacity: 1;
    border-radius: 8px;
    transform: scale(1);
  }
}

@keyframes menuItemAnimation {
  0% {
    opacity: 0;
    transform: translateX(-10px);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

